# QSubber-gtk

./: .gitignore  README.md  meson.build  wscript
data/: meson.build  progress-log.ui  qsubber-gtk.desktop  qsubber.gresource.xml  settings.json  window.ui
src/: application.c  application.h  config.vala  macros.h  main.vala  meson.build  opensubtitles.c  opensubtitles.h  org.imvictor.qsubber.gresource.xml  progress-log.c  progress-log.h  qsubber-application.vala  qsubber-log-dialog.vala  qsubber-opensubtitles.vala  qsubber-utils.vala  qsubber-window.ui  qsubber-window.vala  qsubber.c  qsubber.vala  settings.c  settings.h  utils.c  utils.h  window-private.h  window.c  window.h  wscript
src/resources/: qsubber-log-dialog.ui  qsubber-window.ui  qsubber.gresource.xml
src/resources/gtk/: menus.ui
tools/: lang_table_dump_to_json.py
